--- a/index.html
+++ b/index.html
@@ -15,32 +15,45 @@
   <div class="container-sm bg-custom">
 
     <!--Nav bar-->
-    <nav class="navbar navbar-light">
+    <nav class="navbar navbar-light nav">
       <a class="navbar-brand" href="#" style="color: #ffc36c; font-size: 2em;">囍</a>
+      <a class="nav-link" href="#" style="color: #ffc36c; font-size: 1.5em;">回首頁</a>
     </nav>
-    <div class="row card-area d-flex justify-content-center bg-custom">
+    <div class="d-flex justify-content-center bg-custom">
+      <div class="title text-custom text-center" id="header">
+        <h2>祝福對對碰</h2>
+        <h5>你已完成 : <span class="score"> 0 </span>組</h5>
+        <p>遊戲說明：12組全部找到即可過關</p>
+      </div>
+    </div>
 
+    <div class="row card-area d-flex justify-content-center bg-custom pb-5">
     </div>
   </div>
-  <!-- <footer class="container-md bg-custom-f p-3">
+  <footer class="container-md bg-custom-f p-3">
     <dl class="row mb-0">
-      <dt class="col-sm-3">聯絡我們</dt>
-      <dd class="col-sm-9">
+      <dt class="col-sm-2 mb-2">聯絡我們</dt>
+    </dl>
+    <div class="row mb-0 d-flex justify-content-center">
+      <div class="col-sm-6 pl-5">
         <p class="mb-0">盧冠諺 </p>
         <p class="mb-0">Tel：<a href="tel:+886-922193380" class="text-muted card-link">0922-193380</a></p>
         <p class="mb-0">Mail：<a href="mailto:yanpower1008@gmail.com"
             class="text-muted card-link">yanpower1008@gmail.com</a></p>
         <p>Line ID：<a href="https://line.me/ti/p/nQGL_g5Jcq" class="text-muted card-link"
-            target="_blank">yanpower1008</a></p>
+            target="_blank">yanpower1008</a>
+        </p>
+      </div>
+      <div class="col-sm-6 pl-5 pl-sm-0">
         <p class="mb-0">蔡青蓉 </p>
         <p class="mb-0">Tel：<a href="tel:+886-910214875" class="text-muted card-link">0910-214875</a></p>
         <p class="mb-0">Mail：<a href="mailto:puuy10335@gmail.com" class="text-muted card-link">puuy10335@gmail.com</a>
         </p>
         <p class="mb-0">Line ID：<a href="https://line.me/ti/p/7wVzURxS8v" class="text-muted card-link"
             target="_blank">bear857</a></p>
-      </dd>
-    </dl>
-  </footer> -->
+      </div>
+    </div>
+  </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script src="main.js"></script>
