--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-  <div class="container-sm bg-custom">
+  <div class="container-sm bg-custom px-4">
 
     <!--Nav bar-->
     <nav class="navbar navbar-light nav">
@@ -34,25 +34,6 @@
     <dl class="row mb-0">
       <dt class="col-sm-2 mb-2">聯絡我們</dt>
     </dl>
-    <div class="row mb-0 d-flex justify-content-center">
-      <div class="col-sm-6 pl-5">
-        <p class="mb-0">盧冠諺 </p>
-        <p class="mb-0">Tel：<a href="tel:+886-922193380" class="text-muted card-link">0922-193380</a></p>
-        <p class="mb-0">Mail：<a href="mailto:yanpower1008@gmail.com"
-            class="text-muted card-link">yanpower1008@gmail.com</a></p>
-        <p>Line ID：<a href="https://line.me/ti/p/nQGL_g5Jcq" class="text-muted card-link"
-            target="_blank">yanpower1008</a>
-        </p>
-      </div>
-      <div class="col-sm-6 pl-5 pl-sm-0">
-        <p class="mb-0">蔡青蓉 </p>
-        <p class="mb-0">Tel：<a href="tel:+886-910214875" class="text-muted card-link">0910-214875</a></p>
-        <p class="mb-0">Mail：<a href="mailto:puuy10335@gmail.com" class="text-muted card-link">puuy10335@gmail.com</a>
-        </p>
-        <p class="mb-0">Line ID：<a href="https://line.me/ti/p/7wVzURxS8v" class="text-muted card-link"
-            target="_blank">bear857</a></p>
-      </div>
-    </div>
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
